--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp">
-
+                    <ProgressBar
+                        android:id="@+id/loading1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_gravity="center"
+                        style="@style/CustomProgressBar"
+                        android:visibility="visible"/>
                     <TextView
                         android:id="@+id/title"
                         android:layout_width="wrap_content"
@@ -225,7 +235,7 @@
                 app:layout_constraintTop_toBottomOf="@id/card1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintBottom_toTopOf="@id/button">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
@@ -233,6 +243,17 @@
                     android:layout_height="wrap_content"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
 
+                <ProgressBar
+                    android:id="@+id/loading2"
+                    style="@style/CustomProgressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
                 <TextView
                     android:id="@+id/textNoInternet"
                     android:layout_width="wrap_content"
@@ -244,6 +265,19 @@
                     android:textSize="16sp"
                     android:visibility="gone" />
             </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/button"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:background="@drawable/round_button"
+                app:layout_constraintTop_toBottomOf="@id/card2"
+                android:text="Refresh"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
